starting work on multiguild

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,5 +1,9 @@
+
 tasks:
   - init: python runthisfirst.py
     command: python main.py
 image:
   file: .gitpod.dockerfile
+vscode:
+  extensions:
+    - ms-python.python
