--- a/Pipfile
+++ b/Pipfile
@@ -5,6 +5,7 @@ name = "pypi"
 
 [packages]
 requests = "*"
+discord-ext-menus = {git = "https://github.com/Rapptz/discord-ext-menus"}
 
 [dev-packages]
 
