--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "warbler"
 version = "0.1.0"
 description = ""
-authors = ["Your Name <you@example.com>"]
+authors = ["Evan Boehs <evan@boehs.ml>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
